crates/synth-kicad/tests/snapshots/golden__every_ir_fixture_exports_deterministically@module_divider__schematic.snap
---
source: crates/synth-kicad/tests/golden.rs
expression: schematic
---
(kicad_sch
	(version 20260306)
	(generator "synth-eda")
	(generator_version "10.0")
	(uuid "b4e8a3c2-dca2-5ded-9ad5-f4ef5f5f0372")
	(paper "A4")
	(title_block
		(title "module_divider")
		(date "")
		(rev "")
		(company "")
		(comment 1 "Generated by synth-eda")
		(comment 2 "5 components / 6 nets")
	)
	(lib_symbols
		(symbol "Connector_Generic:Conn_01x02"
		(pin_names
			(offset 1.016)
			(hide yes)
		)
		(exclude_from_sim no)
		(in_bom yes)
		(on_board yes)
		(in_pos_files yes)
		(duplicate_pin_numbers_are_jumpers no)
		(property "Reference" "J"
			(at 0 2.54 0)
			(show_name no)
			(do_not_autoplace no)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property "Value" "Conn_01x02"
			(at 0 -5.08 0)
			(show_name no)
			(do_not_autoplace no)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property "Footprint" ""
			(at 0 0 0)
			(show_name no)
			(do_not_autoplace no)
			(hide yes)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property "Datasheet" ""
			(at 0 0 0)
			(show_name no)
			(do_not_autoplace no)
			(hide yes)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property "Description" "Generic connector, single row, 01x02, script generated (kicad-library-utils/schlib/autogen/connector/)"
			(at 0 0 0)
			(show_name no)
			(do_not_autoplace no)
			(hide yes)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property "ki_keywords" "connector"
			(at 0 0 0)
			(show_name no)
			(do_not_autoplace no)
			(hide yes)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property "ki_fp_filters" "Connector*:*_1x??_*"
			(at 0 0 0)
			(show_name no)
			(do_not_autoplace no)
			(hide yes)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(symbol "Conn_01x02_1_1"
			(rectangle
				(start -1.27 1.27)
				(end 1.27 -3.81)
				(stroke
					(width 0.254)
					(type default)
				)
				(fill
					(type background)
				)
			)
			(rectangle
				(start -1.27 0.127)
				(end 0 -0.127)
				(stroke
					(width 0.1524)
					(type default)
				)
				(fill
					(type none)
				)
			)
			(rectangle
				(start -1.27 -2.413)
				(end 0 -2.667)
				(stroke
					(width 0.1524)
					(type default)
				)
				(fill
					(type none)
				)
			)
			(pin passive line
				(at -5.08 0 0)
				(length 3.81)
				(name "Pin_1"
					(effects
						(font
							(size 1.27 1.27)
						)
					)
				)
				(number "1"
					(effects
						(font
							(size 1.27 1.27)
						)
					)
				)
			)
			(pin passive line
				(at -5.08 -2.54 0)
				(length 3.81)
				(name "Pin_2"
					(effects
						(font
							(size 1.27 1.27)
						)
					)
				)
				(number "2"
					(effects
						(font
							(size 1.27 1.27)
						)
					)
				)
			)
		)
		(embedded_fonts no)
	)
		(symbol "Device:R_US"
		(pin_numbers
			(hide yes)
		)
		(pin_names
			(offset 0)
		)
		(exclude_from_sim no)
		(in_bom yes)
		(on_board yes)
		(in_pos_files yes)
		(duplicate_pin_numbers_are_jumpers no)
		(property "Reference" "R"
			(at 2.54 0 90)
			(show_name no)
			(do_not_autoplace no)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property "Value" "R_US"
			(at -2.54 0 90)
			(show_name no)
			(do_not_autoplace no)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property "Footprint" ""
			(at 1.016 -0.254 90)
			(show_name no)
			(do_not_autoplace no)
			(hide yes)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property "Datasheet" ""
			(at 0 0 0)
			(show_name no)
			(do_not_autoplace no)
			(hide yes)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property "Description" "Resistor, US symbol"
			(at 0 0 0)
			(show_name no)
			(do_not_autoplace no)
			(hide yes)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property "ki_keywords" "R res resistor"
			(at 0 0 0)
			(show_name no)
			(do_not_autoplace no)
			(hide yes)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property "ki_fp_filters" "R_*"
			(at 0 0 0)
			(show_name no)
			(do_not_autoplace no)
			(hide yes)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(symbol "R_US_0_1"
			(polyline
				(pts
					(xy 0 2.286) (xy 0 2.54)
				)
				(stroke
					(width 0)
					(type default)
				)
				(fill
					(type none)
				)
			)
			(polyline
				(pts
					(xy 0 2.286) (xy 1.016 1.905) (xy 0 1.524) (xy -1.016 1.143) (xy 0 0.762)
				)
				(stroke
					(width 0)
					(type default)
				)
				(fill
					(type none)
				)
			)
			(polyline
				(pts
					(xy 0 0.762) (xy 1.016 0.381) (xy 0 0) (xy -1.016 -0.381) (xy 0 -0.762)
				)
				(stroke
					(width 0)
					(type default)
				)
				(fill
					(type none)
				)
			)
			(polyline
				(pts
					(xy 0 -0.762) (xy 1.016 -1.143) (xy 0 -1.524) (xy -1.016 -1.905) (xy 0 -2.286)
				)
				(stroke
					(width 0)
					(type default)
				)
				(fill
					(type none)
				)
			)
			(polyline
				(pts
					(xy 0 -2.286) (xy 0 -2.54)
				)
				(stroke
					(width 0)
					(type default)
				)
				(fill
					(type none)
				)
			)
		)
		(symbol "R_US_1_1"
			(pin passive line
				(at 0 3.81 270)
				(length 1.27)
				(name ""
					(effects
						(font
							(size 1.27 1.27)
						)
					)
				)
				(number "1"
					(effects
						(font
							(size 1.27 1.27)
						)
					)
				)
			)
			(pin passive line
				(at 0 -3.81 90)
				(length 1.27)
				(name ""
					(effects
						(font
							(size 1.27 1.27)
						)
					)
				)
				(number "2"
					(effects
						(font
							(size 1.27 1.27)
						)
					)
				)
			)
		)
		(embedded_fonts no)
	)
	)
	(bus_alias
		"LINK0"
		(members "a" "b")
	)
	(symbol
		(lib_id "Connector_Generic:Conn_01x02")
		(at 20.32 22.86 0)
		(unit 1)
		(in_bom yes)
		(on_board yes)
		(uuid "b9278f7b-988b-51ec-b5bd-037ca60b5c29")
		(property
			"Reference"
			"J1"
			(at 20.32 17.78 0)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property
			"Value"
			"(no value)"
			(at 20.32 27.94 0)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property
			"Footprint"
			"Connector_JST:JST_PH_S2B-PH-K_1x02_P2.00mm_Horizontal"
			(at 20.32 22.86 0)
			(effects
				(font
					(size 1.27 1.27)
				)
				(hide yes)
			)
		)
		(property
			"Datasheet"
			""
			(at 20.32 22.86 0)
			(effects
				(font
					(size 1.27 1.27)
				)
				(hide yes)
			)
		)
		(property
			"MPN"
			""
			(at 20.32 22.86 0)
			(effects
				(font
					(size 1.27 1.27)
				)
				(hide yes)
			)
		)
		(property
			"LCSC"
			""
			(at 20.32 22.86 0)
			(effects
				(font
					(size 1.27 1.27)
				)
				(hide yes)
			)
		)
	)
	(symbol
		(lib_id "Device:R_US")
		(at 81.28 22.86 90)
		(unit 1)
		(in_bom yes)
		(on_board yes)
		(uuid "fa08a352-a303-52e9-bb09-6a529471ad2b")
		(property
			"Reference"
			"D1_R1"
			(at 81.28 18.32 0)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property
			"Value"
			"10kohm"
			(at 81.28 27.4 0)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property
			"Footprint"
			"Resistor_SMD:R_0603_1608Metric"
			(at 81.28 22.86 0)
			(effects
				(font
					(size 1.27 1.27)
				)
				(hide yes)
			)
		)
		(property
			"Datasheet"
			""
			(at 81.28 22.86 0)
			(effects
				(font
					(size 1.27 1.27)
				)
				(hide yes)
			)
		)
		(property
			"MPN"
			""
			(at 81.28 22.86 0)
			(effects
				(font
					(size 1.27 1.27)
				)
				(hide yes)
			)
		)
		(property
			"LCSC"
			""
			(at 81.28 22.86 0)
			(effects
				(font
					(size 1.27 1.27)
				)
				(hide yes)
			)
		)
	)
	(symbol
		(lib_id "Device:R_US")
		(at 81.28 93.98 90)
		(unit 1)
		(in_bom yes)
		(on_board yes)
		(uuid "a70e60f9-ad9d-5c4e-ab79-e82a134b875b")
		(property
			"Reference"
			"D1_R2"
			(at 81.28 89.44 0)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property
			"Value"
			"4.7kohm"
			(at 81.28 98.52 0)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property
			"Footprint"
			"Resistor_SMD:R_0603_1608Metric"
			(at 81.28 93.98 0)
			(effects
				(font
					(size 1.27 1.27)
				)
				(hide yes)
			)
		)
		(property
			"Datasheet"
			""
			(at 81.28 93.98 0)
			(effects
				(font
					(size 1.27 1.27)
				)
				(hide yes)
			)
		)
		(property
			"MPN"
			""
			(at 81.28 93.98 0)
			(effects
				(font
					(size 1.27 1.27)
				)
				(hide yes)
			)
		)
		(property
			"LCSC"
			""
			(at 81.28 93.98 0)
			(effects
				(font
					(size 1.27 1.27)
				)
				(hide yes)
			)
		)
	)
	(symbol
		(lib_id "Device:R_US")
		(at 142.24 22.86 90)
		(unit 1)
		(in_bom yes)
		(on_board yes)
		(uuid "1050d8f5-0885-5498-bc97-c4661c83a3a5")
		(property
			"Reference"
			"D2_R1"
			(at 142.24 18.32 0)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property
			"Value"
			"22kohm"
			(at 142.24 27.4 0)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property
			"Footprint"
			"Resistor_SMD:R_0603_1608Metric"
			(at 142.24 22.86 0)
			(effects
				(font
					(size 1.27 1.27)
				)
				(hide yes)
			)
		)
		(property
			"Datasheet"
			""
			(at 142.24 22.86 0)
			(effects
				(font
					(size 1.27 1.27)
				)
				(hide yes)
			)
		)
		(property
			"MPN"
			""
			(at 142.24 22.86 0)
			(effects
				(font
					(size 1.27 1.27)
				)
				(hide yes)
			)
		)
		(property
			"LCSC"
			""
			(at 142.24 22.86 0)
			(effects
				(font
					(size 1.27 1.27)
				)
				(hide yes)
			)
		)
	)
	(symbol
		(lib_id "Device:R_US")
		(at 142.24 93.98 90)
		(unit 1)
		(in_bom yes)
		(on_board yes)
		(uuid "c6274b2f-4269-5dbd-98cc-7d6fd4fa81fd")
		(property
			"Reference"
			"D2_R2"
			(at 142.24 89.44 0)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property
			"Value"
			"4.7kohm"
			(at 142.24 98.52 0)
			(effects
				(font
					(size 1.27 1.27)
				)
			)
		)
		(property
			"Footprint"
			"Resistor_SMD:R_0603_1608Metric"
			(at 142.24 93.98 0)
			(effects
				(font
					(size 1.27 1.27)
				)
				(hide yes)
			)
		)
		(property
			"Datasheet"
			""
			(at 142.24 93.98 0)
			(effects
				(font
					(size 1.27 1.27)
				)
				(hide yes)
			)
		)
		(property
			"MPN"
			""
			(at 142.24 93.98 0)
			(effects
				(font
					(size 1.27 1.27)
				)
				(hide yes)
			)
		)
		(property
			"LCSC"
			""
			(at 142.24 93.98 0)
			(effects
				(font
					(size 1.27 1.27)
				)
				(hide yes)
			)
		)
	)
	(wire
		(pts
			(xy 77.47 22.86)
			(xy 74.93 22.86)
		)
		(stroke
			(width 0)
			(type default)
		)
		(uuid "49e67bf8-7365-5cea-bcbc-512b0783a06c")
	)
	(wire
		(pts
			(xy 74.93 22.86)
			(xy 74.93 34.29)
		)
		(stroke
			(width 0)
			(type default)
		)
		(uuid "f9903768-92c9-5586-88c2-29539c4ff18c")
	)
	(wire
		(pts
			(xy 74.93 34.29)
			(xy 138.43 34.29)
		)
		(stroke
			(width 0)
			(type default)
		)
		(uuid "c8c0acc6-97c1-5ddc-8381-39b03d7f118a")
	)
	(wire
		(pts
			(xy 138.43 34.29)
			(xy 138.43 22.86)
		)
		(stroke
			(width 0)
			(type default)
		)
		(uuid "689ec2c2-d21a-5b27-acb0-715957690155")
	)
	(wire
		(pts
			(xy 85.09 22.86)
			(xy 87.63 22.86)
		)
		(stroke
			(width 0)
			(type default)
		)
		(uuid "fd70b49d-9f60-5c11-af81-d33f0438c294")
	)
	(wire
		(pts
			(xy 87.63 22.86)
			(xy 87.63 10.16)
		)
		(stroke
			(width 0)
			(type default)
		)
		(uuid "5e6978be-71e1-586d-85ed-510157b0e35f")
	)
	(wire
		(pts
			(xy 87.63 10.16)
			(xy 73.66 10.16)
		)
		(stroke
			(width 0)
			(type default)
		)
		(uuid "2318f09b-9366-5dba-98b9-f18125094c20")
	)
	(wire
		(pts
			(xy 73.66 10.16)
			(xy 73.66 93.98)
		)
		(stroke
			(width 0)
			(type default)
		)
		(uuid "3bbc6617-52c2-53bb-994d-93994c2576e5")
	)
	(wire
		(pts
			(xy 73.66 93.98)
			(xy 77.47 93.98)
		)
		(stroke
			(width 0)
			(type default)
		)
		(uuid "b32ebc70-60b8-52d5-9a8e-3924e83c7110")
	)
	(wire
		(pts
			(xy 85.09 93.98)
			(xy 134.62 93.98)
		)
		(stroke
			(width 0)
			(type default)
		)
		(uuid "0f924936-c1f0-5499-a2dd-de1e4cd34274")
	)
	(wire
		(pts
			(xy 134.62 93.98)
			(xy 134.62 105.41)
		)
		(stroke
			(width 0)
			(type default)
		)
		(uuid "dc140e60-af7b-5ed9-818b-dcf3d8e35489")
	)
	(wire
		(pts
			(xy 134.62 105.41)
			(xy 146.05 105.41)
		)
		(stroke
			(width 0)
			(type default)
		)
		(uuid "3d50943b-c6a9-5551-b6f4-6f2b3b2a8149")
	)
	(wire
		(pts
			(xy 146.05 105.41)
			(xy 146.05 93.98)
		)
		(stroke
			(width 0)
			(type default)
		)
		(uuid "b473165f-c5df-58ec-8a5d-928ed2b98134")
	)
	(wire
		(pts
			(xy 146.05 22.86)
			(xy 148.59 22.86)
		)
		(stroke
			(width 0)
			(type default)
		)
		(uuid "c3a43c4b-2245-51fd-83fe-364e43073099")
	)
	(wire
		(pts
			(xy 148.59 22.86)
			(xy 148.59 29.21)
		)
		(stroke
			(width 0)
			(type default)
		)
		(uuid "9923f5a3-f912-566c-9e0c-c63f4ed9e959")
	)
	(wire
		(pts
			(xy 148.59 29.21)
			(xy 135.89 29.21)
		)
		(stroke
			(width 0)
			(type default)
		)
		(uuid "df26f6aa-4315-5302-a0bc-e55bb5b0227e")
	)
	(wire
		(pts
			(xy 135.89 29.21)
			(xy 135.89 93.98)
		)
		(stroke
			(width 0)
			(type default)
		)
		(uuid "df089a33-1c29-56b6-9f40-2adae720f980")
	)
	(wire
		(pts
			(xy 135.89 93.98)
			(xy 138.43 93.98)
		)
		(stroke
			(width 0)
			(type default)
		)
		(uuid "a22e46e9-0a8e-5be9-9ee1-49f3d20f5d77")
	)
)
